# zooprocess-multiple-separator

./: Dockerfile  README.md  ai4-metadata.yml  manual_tests.py  metadata.json  project.Rproj  pyproject.toml  requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml
tests/: test_api.py
zooprocess_multiple_separator/: api.py  config.py  train.py  utils.py
zooprocess_multiple_separator/api/: __init__.py
